--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -17,11 +17,13 @@
     "yup": "^0.28.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.2",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/styled-components": "^4.1.12",
     "@types/yup": "^0.26.24",
-    "parcel-bundler": "^1.12.4",
+    "parcel": "^2.0.0-beta.2",
+    "postcss": "^8.2.15",
     "typescript": "^3.8.3"
   }
 }
