--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "@bigcommerce/eslint-config": "2.12.0",
-    "@types/node": "20.12.7",
+    "@types/node": "^20.19.25",
     "@types/react": "18.2.73",
     "@types/react-dom": "18.2.23",
     "@types/styled-components": "5.1.34",
